force-app/main/default/objects/SMS_Types__mdt/SMS_Types__mdt.object-meta.xml
<CustomObject>
    <label>SMS Type</label>
    <pluralLabel>SMS Types</pluralLabel>
</CustomObject>