force-app/main/default/objects/SMS_Types__mdt/fields/Dlt_Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Dlt_Content_Id__c</fullName>
    <label>Dlt Content Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>