force-app/main/default/objects/SMS_Types__mdt/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <length>25</length>
    <type>Text</type>
</CustomField>