force-app/main/default/objects/SMS_Types__mdt/fields/SMS_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Name__c</fullName>
    <label>SMS Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>