force-app/main/default/objects/SMS_Types__mdt/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <description>Template text for the SMS - includes dynamic parts as {#var1#}, {#var2#}, etc.</description>
    <inlineHelpText>Template text for the SMS - includes dynamic parts as {#var1#}, {#var2#}, etc.</inlineHelpText>
    <label>SMS Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>