force-app/main/default/objects/SMS_Types__mdt/fields/SMS_Template_Long__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_Long__c</fullName>
    <description>To store long SMS templates</description>
    <label>SMS Template Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>