force-app/main/default/objects/SMS_Types__mdt/fields/Templated_Id__c.field-meta.xml
<CustomField>
    <fullName>Templated_Id__c</fullName>
    <description>Template ID for this SMS Type</description>
    <inlineHelpText>Template ID for this SMS Type</inlineHelpText>
    <label>Templated Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>