force-app/main/default/objects/SMS_Types__mdt/fields/Unicode__c.field-meta.xml
<CustomField>
    <fullName>Unicode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the SMS text should be sent with Unicode true or false</description>
    <inlineHelpText>Whether the SMS text should be sent with Unicode true or false</inlineHelpText>
    <label>Unicode</label>
    <type>Checkbox</type>
</CustomField>